--- a/css/resume.css
+++ b/css/resume.css
@@ -51,3 +51,13 @@
 	display: flex;
 	justify-content: space-between;
 }
+
+@media print {
+#hash{
+display:none;
+}
+ section {
+ 
+ box-shadow:none;
+	}
+}
